<resources>
    <string name="app_name">Мой кошелёк</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="test_profile_name">Султонов Йулдошбой</string>
    <string name="test_credit_card">Кредитная карта</string>
    <string name="test_balance_amount">$ 85 000</string>
    <string name="in_balance">На счету</string>
    <string name="last_history">Последняя история</string>
    <string name="add">Добавить</string>
    <string name="all_actions">Все действии</string>
    <string name="test_card_number">4200 **** **** **65</string>
    <string name="test_date">02/21</string>
    <string name="test_address">Red Square, Moscow, Russian Federation</string>
    <string name="placeholder_description">Местоположение:</string>
    <string name="test_transaction_date">27 илюль 2018 12:21</string>
    <string name="time_description">Дата:</string>
    <string name="my_wallets">Мои счета</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>
    <string name="type_wallet">Тип кошелька</string>
    <string name="currency">Валюта</string>

    <string name="address_found">Адрес найден</string>
    <string name="invalid_lat_long_used">Используемая недопустимая широта или долгота</string>
    <string name="no_address_found">Извините, адрес не найден</string>
    <string name="no_geocoder_available">Отсутствует доступный геокодер</string>
    <string name="no_location_data_provided">Данные о местоположении отсутствуют</string>
    <string name="service_not_available">К сожалению, услуга недоступна</string>

    <string name="permission_denied_explanation">Разрешение было отклонено, но оно необходимо для ядра функциональность.</string>
    <string name="permission_rationale">Требуется разрешение на размещение для основных функций</string>
    <string name="category">Категория</string>

    <string-array name="wallet_types">
        <item>Наличные деньги</item>
        <item>Кредитная карта</item>
        <item>Банковский счет</item>
        <item>Электронный кошелек</item>
    </string-array>
    <string-array name="currency_types">
        <item>USD</item>
        <item>RUB</item>
    </string-array>
</resources>
