<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/transaction_time_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#9b9b9b"
        android:text="@string/time_description"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/transaction_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#000000"
        android:text="@string/test_transaction_date"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/transaction_has_balance_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#9b9b9b"
        android:text="Осталось на счету:"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/transaction_time_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/transaction_has_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#000000"
        android:text="@string/test_balance_amount"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/transaction_has_balance_desc"
        app:layout_constraintRight_toRightOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/transaction_placeholder_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#9b9b9b"
        android:text="@string/placeholder_description"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/transaction_has_balance_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/transaction_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#000000"
        android:text="@string/test_address"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/transaction_placeholder_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</android.support.constraint.ConstraintLayout>