<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout"
    android:layout_width="260dp"
    android:layout_height="166dp">

    <ImageView
        android:id="@+id/card_background"
        android:src="@drawable/photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:text="SBERBANK"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/card_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/shadow_color"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/test_balance_amount"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="94dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/card_text_color"
        android:text="@string/test_card_number"
        android:layout_marginTop="129dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="@id/card_name"
        app:layout_constraintTop_toBottomOf="@id/card_balance"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/card_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/card_text_color"
        android:text="@string/test_date"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="129dp"
        android:layout_gravity="right"
        />
</android.support.v7.widget.CardView>