<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/menu_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true">
    <LinearLayout
        android:id="@+id/menu_home"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/menu_button_layout"
        android:orientation="vertical"
        android:layout_margin="32dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_wallet"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@string/my_wallets"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_statistics"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/menu_button_layout"
        android:orientation="vertical"
        android:layout_margin="32dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_barchart"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@string/statistics"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_settings"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/menu_button_layout"
        android:orientation="vertical"
        android:layout_margin="32dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintTop_toBottomOf="@id/menu_home"
        app:layout_constraintLeft_toLeftOf="parent">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_settings"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@string/settings"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_about"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/menu_button_layout"
        android:orientation="vertical"
        android:layout_margin="32dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintTop_toBottomOf="@id/menu_statistics"
        app:layout_constraintRight_toRightOf="parent">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_menu_info"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="@string/about"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>